rust/src/nasl/interpreter/tests/snapshots/scannerlib__nasl__interpreter__tests__invalid_regex.snap
---
source: src/nasl/interpreter/tests/mod.rs
expression: "crate :: nasl :: interpreter :: tests ::\ninterpret_err(stringify! (invalid_regex), r#\"a = \"hello world\"; a =~ \"[\";\"#)"
---
error: Invalid regular expression: [
  ┌─ invalid_regex:1:25
  │
1 │ a = "hello world"; a =~ "[";
  │                         ^^^ Invalid regular expression: [
